Fix panel from overlapping
- Fixed the issue where the panel was overlapping other elements. By moving grid alignment into the .hero-grid class for better organization and consistency.

--- a/real-estate/style.css
+++ b/real-estate/style.css
@@ -156,21 +156,19 @@ p {
   position: relative;
   width: 100%;
   min-height: 140svh; /* Adjust as needed */
-  overflow: hidden;
 }
 
-.hero-content {
-  position: absolute;
-  top: 20%;
-  left: 25%;
-  transform: translate(-20%, -20%);
-  z-index: 2; /* Ensure content is on top */
-}
 .hero-grid {
+  width: 100%;
+  height: 100%;
   display: grid;
-  gap: 2rem;
-  align-items: center;
   grid-template-columns: repeat(1, 1fr);
+  place-content: center;
+  align-items: center;
+  gap: 2rem;
+  padding: 0rem 4rem;
+  position: absolute;
+  z-index: 3; /* Ensure content is on top */
 }
 .hero-grid-item:first-of-type {
   display: flex;
